<resources>
    <string name="app_name">SimplePOS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Alamat Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_store">Nama Toko</string>
    <string name="prompt_alamatToko">Alamat Toko</string>
    <string name="prompt_noTelpToko">No. Telp Toko</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Ulangi Password</string>
    <string name="text_tittle_daftar_akun">Daftar Akun</string>
    <string name="text_tittle_daftar_akun2">Mendaftar</string>
    <string name="text_sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="text_tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="text_masuk_akun">Masuk</string>
    <string name="text_daftar_akun">Daftar</string>
    <string name="space">_</string>
    <string name="text_tittle_welcome">Selamat Datang,</string>
    <string name="text_tittle_masuk">Masuk Untuk Melanjutkan</string>
    <string name="text_tittle_intro1">Tentukan Informasi Toko</string>
    <string name="text_btn_intro1">Buat Toko</string>
    <string name="text_btn_intro2">Upload Logo</string>
    <string name="text_btn_intro2_1">Tambah Data</string>
    <string name="text_btn_intro2_2">nanti saja</string>
    <string name="price">Rp %1$.2f</string>
    <string name="price2">Rp %1$s</string>

    <!--  Main Fragment String  -->
    <string name="title_laporan">Laporan Keuangan</string>
    <string name="date_picker">Pilih Tanggal</string>
    <string name="total_sales1">Total Sales : </string>
    <string name="total_sales">Rp %1$d</string>
    <string name="gross_profit1">Laba Kotor : </string>
    <string name="gross_profit">Rp %1$f</string>
    <string name="top_sales">Top Sales :</string>
    <string name="top_product_name1">Product</string>
    <string name="top_product_name">%1$s</string>
    <string name="top_category_name1">Category</string>
    <string name="top_category_name">%1$s</string>
    <string name="top_total">%1$d unit</string>
    <string name="date">%1$d-%2$d-%3$d</string>
    <string name="no_product_sold">Tidak ada produk yang terjual</string>
    <string name="cashflowharian_fab">Cash Flow Harian</string>

    <!--  Inventory Fragment String  -->
    <string name="product_stock">Stok Produk</string>
    <string name="product_category">Kategori Produk</string>
    <string name="add_category">Tambah Kategori</string>
    <string name="delete_category_confirmation">Apakah anda yang ingin menghapus kategori ini ?</string>
    <string name="category_name_hint">Nama Kategori</string>
    <string name="category_hexcolor_hint">Kode Hex Warna</string>

    <!-- Universal String    -->
    <string name="cancel">Batalkan</string>
    <string name="save">Simpan</string>
    <string name="filter">Filter</string>
    <string name="stok">Stok</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="product_example_name">Skullcandy S5LHZ-J576 Anti Headphone</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="product_name_hint">Product Name</string>
    <string name="total_product_hint">total product</string>
    <string name="delete_product_confirmation">Apakah anda yakin ingin menghapus produk ?</string>
    <string name="back">Back</string>

    <!--Checkout-->
    <string-array name="phoneCode">
        <item>+62</item>
    </string-array>
    <string name="tax_sample">Tax* (0%)</string>
    <string name="cetak">Cetak</string>
    <string name="detail_checkout">Detail Checkout</string>
    <string name="_62">+62</string>
    <string name="contact_text">Nomor Kontak</string>
    <string name="customer_name">Nama Pembeli</string>
    <string name="id_struck">ID Struk :</string>
    <string name="nama_toko_1">Nama Toko-1</string>
    <string name="dashboard">Dashboard</string>
    <string name="transaksi_ditunda">Transaksi Ditunda</string>


    <!--Profile-->
    <string name="profil">Profil</string>
    <string name="pengaturan_toko">Pengaturan Toko</string>
    <string name="pengaturan_struk">Pengaturan Struk</string>
    <string name="pengaturan_pembayaran">Pengaturan Pembayaran</string>
    <string name="update">Update</string>
    <string name="address">Alamat</string>
    <string name="nama_bisnis">Nama Bisnis</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_20_desember_2021">20 Desember 2021</string>
    <string name="buat_baru">Buat Baru</string>

    <!--Store Fragment-->
    <string name="stock_product">Stok %d</string>
    <string name="total_item">%d item</string>
    <string name="ubah_produk">Ubah Produk</string>
    <string name="opsi_produk">Opsi Produk</string>
    <string name="line">line</string>
    <string name="buat_produk">Buat Produk</string>
    <string name="logo_toko">logo toko</string>
    <string name="hapus">Hapus</string>
    <string name="alamat">Alamat</string>
    <string name="teks_terima_kasih">Teks Terima Kasih</string>
    <string name="website">Alamat Website</string>
    <string name="_62_nomor_kontak">+62 Nomor Kontak</string>
    <string name="inventori">Inventori</string>
    <string name="logout">Logout</string>
    <string name="arrow_go">arrow go</string>
    <string name="payment">payment</string>
    <string name="shop">Shop</string>
    <string name="struk">Struk</string>
    <string name="detail_pembeli_opsional">Detail Pembeli (Opsional)</string>
    <string name="success">Success</string>
    <string name="lihat_receipt">Lihat Receipt</string>
    <string name="info_receipt">Info Receipt</string>
    <string name="checkout">Checkout</string>
    <string name="hold">Hold</string>
    <string name="reset_keranjang">Reset Keranjang</string>
    <string name="tunda_transaksi">Tunda Transaksi</string>
    <string name="list_pembayaran">List Pembayaran</string>
    <string name="kategori">Kategori</string>
    <string name="reset">RESET</string>
    <string name="tambah_stok">Tambah Stok</string>
    <string name="kurangi_stok">Kurangi Stok</string>
    <string name="masukkan_jumlah_restok">Masukkan Jumlah Restok</string>
    <string name="transaksi">Transaksi:</string>
    <string name="qty">QTY</string>
    <string name="nama_barang_title">Nama Barang</string>
    <string name="total">Total</string>
    <string name="harga">Harga</string>
    <string name="subtotal">Subtotal</string>
    <string name="product_price">Product Price</string>
    <string name="detail_toko">Detail Toko</string>
    <string name="nama_toko">Nama Toko</string>

    <!--  Dashboard Activity  -->
    <string name="no_item_in_checkout">Belum Ada Produk Yang Dipilih</string>

    <!--  Checkout Activity  -->
    <string name="invalid_unit_total">Total item harus diantara 1 - %d</string>
    <string name="upload">Upload</string>
    <string name="add_product">Tambah Produk</string>
    <string name="tax">Tax</string>
    <string name="payment_model">Model Pembayaran</string>
    <string name="tax_numerator_label">Tax (%1$.1f)%%</string>


    <!-- Single Product -->
    <string name="stok_awal">Stok Awal</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="harga_kulakan">Harga Kulakan</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="single_produk">Single Produk</string>
    <string name="restock_product">Restok Produk</string>
    <string name="change_stock">Ubah stok</string>
    <string name="total_product_will_be">Total produk akan menjadi %1$d</string>
    <string name="invalid_total_product">Stok produk tidak dapat kurang dari 0</string>
    <string name="share">Share</string>

    <!-- List Category With Count-->
    <string name="jumlah_produk">%1$d produk</string>
    <string name="load">load..</string>
    <string name="jumlah_produk_hint">Jumlah Produk</string>
    <string name="pilih_warna">Pilih Warna</string>
    <string name="tambah_pajak">Tambah Pajak</string>

    <string name="pending_transaction">Transaksi Pending %1$d</string>
    <string name="n_product_in_transaction">%1$d Produk dalam Transaksi</string>
    <string name="cant_hold_checkout_with_zero_item">Tidak dapat menunda checkout dengan 0 item</string>
    <string name="tanggal">Tanggal</string>
    <string name="struct_id">Struct ID: %1$d </string>
    <string name="no_lbl">No.</string>
    <string name="hold_checkout_success">Berhasil melakukan menunda transaksi</string>


</resources>