<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Navbar-->
    <LinearLayout
        android:id="@+id/topNav"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/inventory_navbar"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/inventoryView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title_laporan"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!--Time Picker-->
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_title_laporan"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topNav"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/datePickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/rounded_datepicker_laporan"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date_picker"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:icon="@drawable/logo_datepicker" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/layoutscrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutbottom"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0"
        >
        <!--Total Sales-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--Sales Info-->

            <LinearLayout
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_title_laporan"
                android:orientation="vertical">


                 <LinearLayout
                    android:id="@+id/linearLayoutTotalSales"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:maxLines="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="20dp"
                        android:text="@string/total_sales1"
                        app:autoSizeMaxTextSize="21sp"
                        app:autoSizeMinTextSize="9sp"
                        android:textStyle="bold"
                        app:autoSizeStepGranularity="2sp"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/totalSalesTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:maxLines="1"
                        android:text="@string/total_sales"
                        android:textAlignment="textEnd"
                        app:autoSizeMaxTextSize="19sp"
                        app:autoSizeMinTextSize="7sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <!--Laba Kotor-->
                <TextView
                    android:id="@+id/lblGrossProfit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/gross_profit1"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/grossProfitTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gross_profit"
                    android:maxLines="1"
                    android:fontFamily="sans-serif"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="7sp"
                    app:autoSizeMaxTextSize="17sp"
                    app:autoSizeStepGranularity="2sp"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>

            <!--Item Information-->

            <RelativeLayout
                android:id="@+id/rlProductInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_title_laporan"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                >

                <TextView
                    android:id="@+id/topSalesLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_sales"
                    android:textColor="@color/dark_black"
                    android:maxLines="1"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="15sp"
                    app:autoSizeMaxTextSize="21sp"
                    android:textStyle="bold"
                    app:autoSizeStepGranularity="2sp"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:id="@+id/productLbl"
                    android:layout_below="@+id/topSalesLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_product_name1"
                    android:maxLines="1"
                    android:fontFamily="sans-serif"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:layout_marginTop="10dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeStepGranularity="2sp"/>

                <!--Top Product-->

                <LinearLayout
                    android:id="@+id/linearLayoutTopProduct"
                    android:layout_below="@id/productLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp">

                        <ImageView
                            android:id="@+id/topProductImageIv"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/logo_small" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/topProductNameTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_product_name"
                            android:maxLines="1"
                            android:fontFamily="sans-serif"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="6sp"
                            app:autoSizeMaxTextSize="12sp"
                            app:autoSizeStepGranularity="2sp"/>

                        <TextView
                            android:id="@+id/topProductTotalTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_total"
                            android:maxLines="1"
                            android:fontFamily="sans-serif"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeMaxTextSize="16sp"
                            app:autoSizeStepGranularity="2sp"/>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/catLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayoutTopProduct"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/top_category_name1"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_below="@+id/catLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="20dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/topCategoryColorCv"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardBackgroundColor="@color/orange"
                            app:cardCornerRadius="100dp">

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/topCategoryNameTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_category_name"
                            android:maxLines="1"
                            android:fontFamily="sans-serif"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="6sp"
                            app:autoSizeMaxTextSize="12sp"
                            app:autoSizeStepGranularity="2sp"/>

                        <TextView
                            android:id="@+id/topCategoryTotalTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_total"
                            android:maxLines="1"
                            android:fontFamily="sans-serif"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeMaxTextSize="16sp"
                            app:autoSizeStepGranularity="2sp"/>

                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutbottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.959">

        <Button
            android:id="@+id/cashflowharian_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_cashflow"
            android:elevation="2dp"
            android:fontFamily="@font/lato"
            android:maxLines="1"
            android:text="@string/cashflowharian_fab"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>